--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "quel",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Expression-based reactive library for hot listenables",
   "main": "dist/commonjs/index.js",
   "scripts": {
+    "sample": "vite sample",
     "test": "jest",
     "coverage": "jest --coverage",
     "build-commonjs": "tsc -p conf/typescript/commonjs.json",
@@ -38,8 +39,11 @@
     "babel-jest": "^29.3.1",
     "eslint": "^8.28.0",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "test-callbag-jsx": "^0.4.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4"
   }
 }
