add benchmarking, improve performance

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,8 @@
 {
-	"extends": "./conf/typescript/base.json"
+	"extends": "./conf/typescript/base.json",
+	"ts-node": {
+		"compilerOptions": {
+			"module": "commonjs"
+		}
+	}
 }
