--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "build-commonjs": "tsc -p conf/typescript/commonjs.json",
     "build-es": "tsc -p conf/typescript/es.json",
     "build": "npm run build-commonjs && npm run build-es",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "bench:perf": "ts-node ./benchmark/perf",
+    "bench:mem": "node -r ts-node/register --expose-gc ./benchmark/mem",
+    "bench": "npm run bench:perf && npm run bench:mem"
   },
   "files": [
     "dist/es6",
@@ -39,18 +42,27 @@
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@sindresorhus/tsconfig": "^3.0.1",
+    "@types/benchmark": "^2.1.2",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.10",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "babel-jest": "^29.3.1",
+    "benchmark": "^2.1.4",
     "eslint": "^8.28.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "rxjs": "^7.5.7",
+    "streamlets": "^0.5.1",
+    "table": "^6.8.1",
     "test-callbag-jsx": "^0.4.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
+    "tslib": "^2.4.1",
     "typescript": "^4.9.3",
     "vite": "^3.2.4"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2"
   }
 }
