--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "quel",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Expression-based reactive library for hot listenables",
   "main": "dist/commonjs/index.js",
-  "module": "dist/es6/index.js",
-  "types": "dist/es6/index.d.ts",
+  "module": "dist/es/index.js",
+  "types": "dist/es/index.d.ts",
   "scripts": {
     "sample": "vite sample",
     "test": "jest",
