--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quel",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Expression-based reactive library for hot listenables",
   "main": "dist/commonjs/index.js",
   "module": "dist/es/index.js",
@@ -49,7 +49,7 @@
     "@typescript-eslint/parser": "^5.45.0",
     "babel-jest": "^29.3.1",
     "benchmark": "^2.1.4",
-    "chalk": "^5.1.2",
+    "chalk": "^4.1.2",
     "eslint": "^8.28.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
@@ -62,6 +62,7 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
-    "vite": "^3.2.4"
+    "vite": "^3.2.4",
+    "xstream": "^11.14.0"
   }
 }
