--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,9 @@ jobs:
 
       - name: Check Coverage
         run: npm run coverage
+        
+      - name: Fix README for NPM
+        run: tail -n +2 README.md > README.md.tmp && mv README.md.tmp README.md
       
       - name: Publish
         uses: JS-DevTools/npm-publish@v1
