--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": [ "@typescript-eslint"],
+  "ignorePatterns": ["dist/**/*"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended"
